[gd_scene load_steps=28 format=2]

[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/NPC.gd" type="Script" id=2]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/$MonsterA.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 24, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 0, 32, 24, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 24, 32, 24, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 48, 32, 24, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 0, 64, 24, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 24, 64, 24, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 48, 64, 24, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 0, 96, 24, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 24, 96, 24, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 9 )
region = Rect2( 48, 96, 24, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Animate",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 4.52575

[sub_resource type="CapsuleShape2D" id=15]
radius = 5.23588
height = 6.81275

[sub_resource type="CircleShape2D" id=16]
radius = 58.5089

[sub_resource type="CircleShape2D" id=17]
radius = 5.61505

[sub_resource type="CircleShape2D" id=18]
radius = 4.95223

[node name="NPC" type="KinematicBody2D"]
collision_layer = 2147483664
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 0.0662155 )
frames = SubResource( 13 )
animation = "Animate"
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 0.0662155 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -1.92028 )
shape = SubResource( 14 )

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.0662155, -15.1636 )
shape = SubResource( 15 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.827451, 0.572549, 0.572549, 0.352941 )
position = Vector2( -0.111366, -0.8909 )
shape = SubResource( 16 )

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.334099, -14.3657 )
shape = SubResource( 17 )

[node name="SoftCollision" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -1.64861 )
shape = SubResource( 18 )

[node name="WanderController" parent="." instance=ExtResource( 6 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
